@@ -80,6 +80,7 @@ namespace netlist{
     virtual CaseItem* deep_copy() const;
     virtual void db_register(int iod = 1);
     virtual void db_expunge();
+    NETLIST_SET_ALWAYS_POINTER_DECL;
     bool is_default() const {return exps.size() == 0; }
 
     // data
@@ -137,6 +138,7 @@ namespace netlist{
     virtual CaseState* deep_copy() const;
     virtual void db_register(int iod = 1);
     virtual void db_expunge();
+    NETLIST_SET_ALWAYS_POINTER_DECL;
     void set_name(const BIdentifier& nm) {name = nm; named=true;}
     bool is_named() const { return named; }
     bool is_casex() const { return casex; }
